src/mesh-preview.css
:root
{
    --color-border-main: lightgray;
    --color-border-secondary: lightgray;
}

body
{
    margin: 0;
    padding: 0;
    overflow: hidden;
    font-family: sans-serif;
    background-color: rgb(245, 245, 245);
}

.info-box
{
    user-select: none;
    position: absolute;
    bottom: 40px;
    left: 40px;
    border: 1px solid var(--color-border-main);
    border-radius: 3px;
    height: 0;
    display: flex;
    padding: 28px;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    background-color: white;
    white-space: nowrap;
    transition: width 0.25s;
    box-shadow: white 0px 0px 0px 6px;
}

.info-box.expanded
{
    justify-content: left;
}

.info-box a
{
    text-decoration: none;
    color: inherit;
}

.info-box a:hover
{
    text-decoration: underline;
}

#luujanko-rendering-container
{
    position: relative;
    top: 0;
    z-index: 0;
}

#control-panel
{
    user-select: none;
    position: absolute;
    top: 3%;
    right: 3%;
    z-index: 1;
    border: 1px solid var(--color-border-main);
    border-radius: 3px;
    width: 285px;
    background-color: white;
    overflow: hidden;
    box-shadow: white 0px 0px 0px 6px;
    filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.2));
}

#control-panel .section
{
    padding: 0 20px;
    height: 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#control-panel .section.polycount
{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

#control-panel .section.fields
{
    height: auto;
    padding: 20px 20px;
}

#control-panel .section.dragger
{
    padding: 0;
    height: 45px;
}

#control-panel .section + .section
{
    border-top: 1px solid var(--color-border-secondary);
}

#control-panel .dragger
{
    cursor: grab;
    background-color: lightgray;

    /* Image source: https://stackoverflow.com/a/17893379. */
    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABZJREFUeNpi2r9//38gYGAEESAAEGAAasgJOgzOKCoAAAAASUVORK5CYII=);
}

#control-panel.dragging .dragger
{
    cursor: grabbing;
}

#control-panel hr
{
    margin-top: 27px;
    margin-bottom: 5px;
    border: none;
    border-bottom: 1px solid var(--color-border-secondary);
}

#control-panel .field
{
    display: flex;
    flex-direction: column;
}

#control-panel .field + .field
{
    margin-top: 10px;
}

#control-panel .field select,
#control-panel .field input
{
    appearance: none;
    padding: 10px;
    margin-top: 8px;
    border: 1px solid var(--color-border-secondary);
    border-radius: 6px;
    background-color: white;
    outline: none;
}

#control-panel .field input[type="number"]::-webkit-outer-spin-button,
#control-panel .field input[type="number"]::-webkit-inner-spin-button
{
    display: none;
}

#control-panel .field input[type="number"]
{
    -moz-appearance: textfield;
}

#control-panel .field.disabled *
{
    color: lightgray;
    pointer-events: none;
    cursor: not-allowed;
}

[v-cloak]
{
    display: none;
}

/* Vue transitions. */
.flip-enter-active,
.flip-leave-active
{
    transition: transform 0.25s,
                opacity 0.25s;
}
.flip-enter
{
    transform: rotateX(-90deg);
}
.flip-leave-to 
{
    transform: rotateX(90deg);
}

.drop-enter-active,
.drop-leave-active
{
    transition: transform 0.25s;
}
.drop-enter
{
    transform: translateY(-40px);
}
.drop-leave-to 
{
    transform: translateY(40px);
    filter: blur(1px);
    color: lightgray;
}

